manifestfile/ingress/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oneingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a10e17b818abc4621957705cdfaa5a6c-1183696515.ap-south-1.elb.amazonaws.com
    http:
      paths:
        
         -  path: /
            pathType: Prefix
            backend:
              service: 
                name: frontendsrv
                port:
                  number: 80
         -  path: /todo
            pathType: Prefix
            backend:
              service: 
                name: frontendsrv
                port:
                  number: 80
